[project]
name = "console-faq"
version = "0.1.0"
description = ""
authors = [
    {name = "int422",email = "you@example.com"},
    {name = "kikyuoo",email = "you@example.com"},
    {name = "makaroonz",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama (>=0.4.6,<0.5.0)",
    "pyfiglet (>=1.0.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "main"}]

[tool.poetry.scripts]
faq = "main.main:main"